force-app/poc/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>A customer Site where services are provided</description>
    <label>Site</label>
    <nameField>
        <displayFormat>SITE-{0000}</displayFormat>
        <label>Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>