force-app/poc/default/objects/Site__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Sreet</label>
    <type>TextArea</type>
</CustomField>