force-app/poc/default/objects/Site__c/fields/Town_City__c.field-meta.xml
<CustomField>
    <fullName>Town_City__c</fullName>
    <label>Town or City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>